--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-23  Eli Zaretskii  <eliz@gnu.org>
+
+	* startup.el (command-line): Don't display an empty user name in
+	the error message about non-existent home directory, when
+	init-file-user was set to an empty string.  See
+	http://lists.gnu.org/archive/html/bug-gnu-emacs/2012-07/msg00835.html
+	for the details and context.
+
 2012-07-22  Vincent Belaïche  <vincentb1@users.sourceforge.net>
 
 	* ses.el (ses-cell-formula-aset): New macro.
