--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-24  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (init_iterator): Don't compute dimensions of truncation
+	and continuation glyphs on tooltip frames, leave them at zero.
+	Avoids continued lines in tooltips.  (Bug#11832)
+
 2012-07-24  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Simplify copy_overlay.
