--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-25  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc-alg.el (math-simplify-divide): Don't cross multiply
+	in an equation when the lhs is a variable.
+
 2012-07-24  Julien Danjou  <julien@danjou.info>
 
 	* net/netrc.el (netrc-find-service-number, netrc-store-data):
