--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-07-25  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Adjust buffer text indirection counters at the end of Fkill_buffer.
+	* buffer.c (Fkill_buffer): Adjust indirection counters when the
+	buffer is definitely dead.  This should really fix an issue reported
+	by Christoph Scholtes again.  (Bug#12007).
+	(init_buffer_once): Initialize indirection counters of
+	buffer_defaults and buffer_local_symbols (for sanity and safety).
+
 2012-07-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (init_iterator): Don't compute dimensions of truncation
@@ -7,7 +16,7 @@
 2012-07-24  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Simplify copy_overlay.
-	* buffer.c (copy_overlay): Simplify, use build_marker.
+	* buffer.c (copy_overlay): Simplify.  Use build_marker.
 	* lisp.h (struct Lisp_Overlay): Restore comment with minor tweaks.
 
 2012-07-23  Eli Zaretskii  <eliz@gnu.org>
