--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,12 @@
+2012-07-25  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Prefer typical American spelling for "acknowledgment".
+	* calc.texi (History and Acknowledgments): Rename from
+	History and Acknowledgements.
+	* idlwave.texi (Acknowledgments):
+	* ses.texi (Acknowledgments):
+	* woman.texi (Acknowledgments): Rename from Acknowledgements.
+
 2012-07-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Rename configure.in to configure.ac (Bug#11603).
