--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-25  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Prefer typical American spelling for "acknowledgment".
+	* vc/add-log.el (change-log-acknowledgment): Rename from
+	change-log-acknowledgement, with an alias for the old name.
+
 2012-07-25  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc-alg.el (math-simplify-divide): Don't cross multiply
