--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-25  Leo Liu  <sdl.web@gmail.com>
+
+	* progmodes/cc-menus.el (cc-imenu-objc-function): Avoid leaving nil in
+	the alist (bug#12029).
+
 2012-07-25  Chong Yidong  <cyd@gnu.org>
 
 	* mouse.el (mouse-drag-track): Do not set the mark if the user
