--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* eval.c (Fautoload_do_load): Rename from do_autoload, export to Lisp,
+	add argument, tune behavior, and adjust all callers.
+
 2012-07-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use typedef for EMACS_INT, EMACS_UINT.
