--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-26  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/emacs.$(O)): Update dependencies.
+
 2012-07-26  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Simplify export of symbols to GDB (Bug#12036).
