--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2012-07-26  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in ($(lisp)/calendar/cal-loaddefs.el)
+	($(lisp)/calendar/diary-loaddefs.el)
+	($(lisp)/calendar/hol-loaddefs.el, $(lisp)/mh-e/mh-loaddefs.el)
+	($(lisp)/net/tramp-loaddefs.el): Depend on update-subdirs.  Fixes
+	failures in parallel bootstrap because subdirs.el is being
+	rewritten while the autoload files are built at the same time,
+	which needs to load subdirs.el.
+
 2012-07-26  Martin Rudalics  <rudalics@gmx.at>
 
 	* mouse.el (popup-menu): Fix doc-string and re-indent code.
