--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-27  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Fix recently-introduced typos in Windows port.
+	Reported by Martin Rudalics <rudalics@gmx.at>.
+	* w32.c (init_environment): Replace comma with semicolon.
+	* w32fns.c (syms_of_w32fns): Likewise.
+
 2012-07-27  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Improve GDB symbol export (Bug#12036).
