--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,9 +1,15 @@
 2012-07-27  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Revert last save_excursion_save and save_excursion_restore changes.
+	* alloc.c, editfns.c, marker.c, lisp.h: Revert.
+	Lots of crashes reported by Chong Yidong <cyd@gnu.org>.
+
+2012-07-27  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Fix recently-introduced typos in Windows port.
 	Reported by Martin Rudalics <rudalics@gmx.at>.
 	* w32.c (init_environment): Replace comma with semicolon.
-	* w32fns.c (syms_of_w32fns): Likewise.
+	* w32fns.c (syms_of_w32fns): Add missing parenthesis.
 
 2012-07-27  Paul Eggert  <eggert@cs.ucla.edu>
 
